%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.6-1 (2023-08-01 r4203)}{
  \subsection{New Features}{
    \itemize{
      \item Several new coercion utilities, exported and documented
      in \code{help("fastMisc")}.  Some of these supercede ones made
      available (experimentally) in \pkg{Matrix} 1.5-4; for example,
      \code{.M2m} makes both \code{.dense2m} and \code{.sparse2m}
      redundant.  The superceded ones are not yet formally deprecated,
      but are no longer documented.

      \item \code{drop0} is now implemented independently
      of \code{CHOLMOD}, becoming more efficient notably for
      logical arguments, no longer requiring a coercion to double.

      \item \code{drop0} gains an argument \code{give.Csparse}
      to complement \code{is.Csparse}.  \code{FALSE} indicates
      that \code{RsparseMatrix}, \code{TsparseMatrix}, and
      \code{indMatrix} arguments should be handled directly,
      without a coercion to \code{CsparseMatrix}.  The default
      value is \code{TRUE}, for backwards compatibility.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Fix four Valgrind-detected memory bugs.

      \item \code{<diagonalMatrix> \%*\% <RsparseMatrix>} works again.

      \item \code{as(<diagonalMatrix>, "symmetricMatrix")} now checks
      for symmetric \code{Dimnames}, for consistency.

      \item as(<indMatrix>, "[nld](sparse)?Matrix") now returns
      a \code{.gRMatrix} or a \code{.gCMatrix} depending on the
      \code{margin} slot.

      \item \code{as(<[CR]sparseMatrix>, "generalMatrix")} now checks
      if the number of nonzero entries in the result would exceed
      \code{INT_MAX} and throws an error in that case.

      \item API C function \code{chm_sparse_to_SEXP} now sorts and